<?xml version="1.0"?>
<?xml-model
    href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>client_server_example</name>
    <version>0.0.0</version>
    <description>Examples of minimal server/client using rclcpp in Docker</description>
    <maintainer email="toshiharutf@gmail.com">user</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>example_interfaces</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>example_interfaces</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>